<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="inc.ahmedmourad.bakery.view.fragments.RecipesFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp">

                <ImageView
                    android:id="@+id/main_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_left_black"
                    tools:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cupcake_icon_cd"
                    android:paddingBottom="8dp"
                    android:paddingEnd="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="4dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_cupcake" />

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/main_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/autoplay"
                    android:textColor="@android:color/secondary_text_light"
                    android:theme="@style/SwitchTheme"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.eralp.circleprogressview.CircleProgressView
                    android:id="@+id/main_progressbar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:cpv_background_circle_color="#49253048"
                    app:cpv_background_circle_width="2dp"
                    app:cpv_circle_color="@color/colorSecondary"
                    app:cpv_circle_width="2dp"
                    app:cpv_text_color="#27375c"
                    app:cpv_text_size="12"
                    app:cpv_text_suffix="%"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/main_add_to_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/back"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_widget"
                    tools:visibility="visible" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/main_root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/main_master_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <View
            android:id="@+id/main_divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorDivider" />

        <FrameLayout
            android:id="@+id/main_details_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="38dp"
        android:visibility="gone"
        app:backgroundTint="@color/colorFab"
        app:srcCompat="@drawable/ic_mixer"
        tools:visibility="visible" />

</android.support.design.widget.CoordinatorLayout>
