<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="en_app_name" translatable="false">Bakery</string>
    <string name="en_media" translatable="false">media</string>

    <string name="app_name">Bakery</string>

    <string name="network_error">Bakery Sync Failed!\nCheck your network connection.</string>
    <string name="network_error_no_cause">Bakery Sync Failed!\n%1$s</string>
    <string name="network_error_cause">Bakery Sync Failed!\n%1$s\n%2$s</string>

    <string name="error">Something went wrong!</string>
    <string name="error_no_cause">Something went wrong!\n%1$s</string>
    <string name="error_cause">Something went wrong!\n%1$s\n%2$s</string>

    <string name="error_player">Something went wrong while fetching the video!</string>

    <string name="cupcake_icon_cd">Cupcake icon</string>
    <string name="add_to_widget">ADD TO WIDGET</string>

    <plurals name="servings">
        <item quantity="one">%1$d Person</item>
        <item quantity="other">%1$d Persons</item>
    </plurals>

    <string name="ingredient_quantity">%1$s %2$s</string>

    <string name="step_title">%1$d. %2$s</string>

    <string name="player_position">%1$d/%2$d</string>

    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="select_all">Select All?</string>
    <string name="select">SELECT</string>
    <string name="unselect">UNSELECT</string>
    <string name="select_all_ingredients">Select all ingredients?</string>
    <string name="unselect_all_ingredients">Unselect all ingredients?</string>
    <string name="unselect_all">Unselect All?</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="autoplay">Autoplay</string>
    <string name="back">Back</string>
    <string name="go">GO</string>
    <string name="go_to_step">Go to step</string>

    <string name="select_recipe">Select Recipe</string>
    <string name="configure">Configure</string>
    <string name="exit_fullscreen" tools:keep="@string/exit_fullscreen">Exit fullscreen</string>
    <string name="enter_fullscreen">Enter fullscreen</string>
    <string name="update_widget_success">Widget has been successfully updated!</string>
    <string name="no_widgets_found">You have no Bakery widgets on your home screen!</string>
    <string name="select_widget_to_update">Select widget to update</string>

</resources>
