<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipes_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        app:shimmer_demo_angle="20"
        app:shimmer_demo_child_count="4"
        app:shimmer_demo_layout="@layout/item_recipe_shimmer"
        app:shimmer_demo_layout_manager_type="linear_vertical"
        app:shimmer_demo_shimmer_color="#73ffffff" />

</android.support.v4.widget.SwipeRefreshLayout>
